# pytorch-starter-project

./: .gitignore  LICENSE  README.md  conda-lock.yml  environment.yml  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
notebooks/: nb_init.py  test.ipynb
src/: app.py
