[tool.poetry]
name = "pytorch-starter-project"
version = "1.0.0"
description = ""
authors = ["Yash Gorana <yash.gorana@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
pandas = "^1.5.3"
click = "^8.1.3"
requests = "^2.28.2"
mlflow = "^2.1.1"
tqdm = "^4.64.1"
llvmlite = "^0.39.1" # for fixing llvmlite errors on linux

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^22.12.0"}
ipykernel = "^6.20.2"

[tool.poetry.group.gpu.dependencies]
torch = [
  # Python 3.8
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl", markers = "python_version == '3.8' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-win_amd64.whl", markers = "python_version == '3.8' and sys_platform == 'win32'" },
  # Python 3.9
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl", markers = "python_version == '3.9' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-win_amd64.whl", markers = "python_version == '3.9' and sys_platform == 'win32'" },
  # Python 3.10
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-win_amd64.whl", markers = "python_version == '3.10' and sys_platform == 'win32'" }
]
torchvision = [
  # Python 3.8
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp38-cp38-linux_x86_64.whl", markers = "python_version == '3.8' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp38-cp38-win_amd64.whl", markers = "python_version == '3.8' and sys_platform == 'win32'" },
  # Python 3.9
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp39-cp39-linux_x86_64.whl", markers = "python_version == '3.9' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp39-cp39-win_amd64.whl", markers = "python_version == '3.9' and sys_platform == 'win32'" },
  # Python 3.10
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp310-cp310-win_amd64.whl", markers = "python_version == '3.10' and sys_platform == 'win32'" }
]
timm = "^0.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
