[tool.poetry]
name = "pytorch-starter-project"
version = "1.0.0"
description = ""
authors = ["Yash Gorana <yash.gorana@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
click = "^8.1.3"
requests = "^2.28.2"

[tool.poetry.group.mlflow.dependencies]
llvmlite = "^0.39.1"
mlflow = "^2.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^23.1.0"}
ipykernel = "^6.22.0"

[tool.poetry.group.pytorch.dependencies]
torch = "^2.0.0"
torchvision = "^0.15.1"
timm = "^0.6.12"
lightning = "^2.0.0"
transformers = "^4.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
