[tool.poetry]
name = "pytorch-starter-project"
version = "1.0.0"
description = ""
authors = ["Yash Gorana <yash.gorana@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
click = "^8.1.3"
requests = "^2.28.2"
ipykernel = "^6.22.0"
mlflow-skinny = "^2.2.2"

[tool.poetry.group.pytorch.dependencies]
torch = "2.0.0"
torchvision = "0.15.1"
lightning = "2.0.0"
timm = "^0.6.12"
transformers = "^4.27.2"
pydantic = "<=1.10.4" # Fix lightning https://github.com/Lightning-AI/lightning/issues/17106
fastapi = "0.86" # Fix lightning https://github.com/Lightning-AI/lightning/issues/17106

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
